# agent-token-saver

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE_SNIPPET.md  CODE_OF_CONDUCT.md  CONSOLIDATION_REPORT.md  CONTRIBUTING.md  HYPERSTACK.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_3.0.1.md  RELEASE_NOTES_3.1.0.md  SECURITY.md  SPEC.md  TOOLS_GUIDE.md  install-optimized.sh  install-universal.sh  install.sh  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
adapters/: hyperstack.ts
bench/: META_PROMPT.md  RESULTS.md  VS_CRAWL4AI.md  run.py  usecase_simulations.py
cli/: cts_doctor.py
core/: agent-teams.ts
docs/: CLI_FIRST_POLICY.md  FULL_CONTEXT_MEASUREMENT.md  HOOKS_AND_AGENTS.md  LAUNCH_KIT_2026-07-13.md  NEWS_PIPELINE.md  SKOOL_SOFT_LAUNCH_2026-07-13.md  SUBAGENT_CONTEXT_PROTOCOL.md  TOKEN_SAVER_RESEARCH_2026-07-09.md  TOKEN_SAVER_RESEARCH_2026-07-13.md  TOKEN_SAVER_RESEARCH_2026-07-19.md  TOKEN_SAVER_STACK_2026.md  ai-cheatsheet.md
integration/: README.md
scripts/: abba.py  bench_news_agent_stack.py  benchmark_output_filters.py  codex_provider_ab.py  external_usage_gate.py  full_context_ledger.py  graph_query_benchmark.py  headroom_provider_ab.py  install_agent_token_saver.py  kimi_k3_lane_benchmark.py  make_log_fixture.py  neutral_install_smoke.sh  news_projection.py  remote_bootstrap_smoke.sh  stack_doctor.py  token_saver_benchmark.py  token_stack_matrix_benchmark.py
stack/: catalog.json
tests/: test_abba.py  test_benchmark_helpers.py  test_codex_provider_ab.py  test_devin_goal_system.sh  test_external_usage_gate.py  test_goal_system.sh  (+9 more)
(+119 files in other folders)
