[project]
name = "agent-token-saver"
version = "3.1.5"
description = "Measured token routing, projection and hook wiring for coding agents."
authors = [{name = "Maxim Supersynergy"}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff==0.14.14",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
